--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -10184,7 +10184,7 @@ a:hover {
 
 .container-grid-projects {
   display: grid;
-  grid-template-rows: 1fr 1fr 15fr;
+  grid-template-rows: 1fr 1fr;
   grid-template-columns: 1fr 5fr 1fr;
   grid-template-areas: ". header-resume ." ". titr-resume ." ". main-resume ." "fus fus fus " ". . .";
 }
